--- a/deploy/modules/mcollective/templates/server.cfg.erb
+++ b/deploy/modules/mcollective/templates/server.cfg.erb
@@ -11,15 +11,20 @@ securityprovider = none
 direct_addressing = yes
 direct_addressing_threshold = 5
 
-connector = redis
-plugin.redis.host = 192.168.2.10
+connector = rabbitmq
+plugin.rabbitmq.vhost = /mcollective
+plugin.rabbitmq.pool.size = 1
+plugin.rabbitmq.pool.1.host = puppet
+plugin.rabbitmq.pool.1.port = 6163
+plugin.rabbitmq.pool.1.user = mcollective
+plugin.rabbitmq.pool.1.password = changeme
 
 factsource = yaml
 plugin.yaml = /etc/mcollective/facts.yaml
 classesfile = /etc/mcollective/classes.txt
 
-registration = redis
-registerinterval = 10
+#registration = redis
+#registerinterval = 10
 
 rpcaudit = 1
 rpcauditprovider = logfile
