mcollective related Debian/RedHat configs & folders

--- a/deploy/modules/mcollective/templates/server.cfg.erb
+++ b/deploy/modules/mcollective/templates/server.cfg.erb
@@ -1,6 +1,6 @@
 collectives = mcollective
 main_collective = mcollective
-libdir = /usr/libexec/mcollective
+libdir = <%= @mcollective_libdir %>
 logfile = /var/log/mcollective.log
 loglevel = info
 daemonize = 1
