Debian related... last mile! works :)

--- a/deploy/modules/mcollective/templates/client.cfg.erb
+++ b/deploy/modules/mcollective/templates/client.cfg.erb
@@ -1,6 +1,6 @@
 collectives = mcollective
 main_collective = mcollective
-libdir = /usr/libexec/mcollective
+libdir = <%= @mcollective_libdir %>
 loglevel = warn
 logger_type = console
 daemonize = 1
